Turn off rotate

--- a/InfiniTimeApp/app/src/main/res/layout/recycler_view_row.xml
+++ b/InfiniTimeApp/app/src/main/res/layout/recycler_view_row.xml
@@ -19,9 +19,9 @@
 
             <ImageView
                 android:id="@+id/image_view"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="30dp"
+                android:layout_width="98dp"
+                android:layout_height="98dp"
+                android:layout_marginStart="50dp"
                 android:maxHeight="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
                 android:text="MAC Address"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/image_view"
