--- a/InfiniTimeApp/app/src/main/res/layout/activity_watch.xml
+++ b/InfiniTimeApp/app/src/main/res/layout/activity_watch.xml
@@ -8,12 +8,14 @@
 
     <Button
         android:id="@+id/button_disconnect"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:text="@string/disconnect_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
